hide scrollbar to prevent width mutation and reflow

--- a/app/styles.scss/main.scss
+++ b/app/styles.scss/main.scss
@@ -13,6 +13,10 @@
 $padding: 0 20px 120px;
 $width: 500px;
 
+::-webkit-scrollbar { 
+  display: none; 
+}
+
 body {
   padding: $padding;
   width: $width;
